--- a/package.json
+++ b/package.json
@@ -61,19 +61,26 @@
 		"wdns"
 	],
 	"peerDependencies": {
-		"vue": "^3.2.45"
+		"vue": "^3.2.47"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.21.0",
+		"@babel/eslint-parser": "^7.19.1",
 		"@rollup/plugin-alias": "^4.0.3",
 		"@rollup/plugin-commonjs": "^24.0.1",
 		"@rollup/plugin-json": "^6.0.0",
 		"@rollup/plugin-node-resolve": "^15.0.1",
+		"@rollup/plugin-terser": "^0.4.0",
 		"@types/node": "^18.14.2",
 		"@typescript-eslint/eslint-plugin": "^5.53.0",
 		"@typescript-eslint/parser": "^5.53.0",
 		"@vitejs/plugin-vue": "^4.0.0",
+		"@vue/cli-plugin-babel": "^5.0.8",
+		"@vue/cli-plugin-eslint": "^5.0.8",
+		"@vue/cli-service": "^5.0.8",
 		"@vue/compiler-sfc": "^3.2.47",
 		"@vue/eslint-config-typescript": "^11.0.2",
+		"autoprefixer": "^10.4.13",
 		"eslint": "^8.35.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-import": "^2.27.5",
@@ -82,14 +89,28 @@
 		"gh-pages": "^5.0.0",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.1.2",
+		"postcss": "^8.4.21",
+		"postcss-html": "^1.5.0",
+		"postcss-scss": "^4.0.6",
 		"prettier": "^2.8.4",
+		"prism-themes": "^1.9.0",
+		"prismjs": "^1.29.0",
 		"rollup": "^3.17.3",
 		"rollup-plugin-polyfill-node": "^0.12.0",
+		"rollup-plugin-postcss": "^4.0.2",
+		"rollup-plugin-scss": "^4.0.0",
 		"rollup-plugin-typescript2": "^0.34.1",
+		"sass": "^1.58.3",
+		"stylelint": "^15.2.0",
+		"stylelint-config-standard": "^30.0.1",
+		"stylelint-order": "^6.0.2",
+		"stylelint-scss": "^4.4.0",
 		"typescript": "^4.9.3",
 		"vite": "^4.1.0",
+		"vite-plugin-babel": "^1.1.3",
 		"vite-plugin-eslint": "^1.8.1",
-		"vue": "^3.2.45",
+		"vite-plugin-stylelint": "^4.2.0",
+		"vue": "^3.2.47",
 		"vue-tsc": "^1.2.0"
 	}
 }
