--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,13 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+docs
 dist-ssr
 *.local
 
 # Editor directories and files
 .vscode/*
+.history/*
 !.vscode/extensions.json
 .idea
 .DS_Store
@@ -21,6 +23,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
 
 .stylelintcache
