--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vue3-unicorn-log",
-	"version": "1.0.0-beta",
+	"version": "1.0.0",
 	"description": "A magical 🦄 plugin to make coloring the console output easier and more flexible.",
 	"private": false,
 	"main": "dist/vue3-unicorn-log.js",
