--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
 		"stylelint-order": "^6.0.2",
 		"stylelint-scss": "^4.4.0",
 		"typescript": "^4.9.3",
+		"ua-parser-js": "^1.0.34",
 		"vite": "^4.1.0",
 		"vite-plugin-babel": "^1.1.3",
 		"vite-plugin-eslint": "^1.8.1",
